Intro Docker added css and js

--- a/docker/intro/www/index.html
+++ b/docker/intro/www/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Hello</title>
 </head>
 <body>
-    <h1>Hello World !</h1>
+    <header class="header">
+        <h1 class="title">Hello Vote !</h1>
+        <p class="paragraph">Premiers pas avec Docker</p>
+    </header>
+    <main class="main">
+        <section class="vote-section">
+
+        </section>
+    </main>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
