fix: fixed formulaire.html

--- a/Frontend/exercice1/www/formulaire.html
+++ b/Frontend/exercice1/www/formulaire.html
@@ -28,7 +28,7 @@
             <legend>Informations de contact</legend> 
             <p>
                 <label for="email">Adresse Email :</label>
-                <input type="text" id="mail" name="user-mail">
+                <input type="email" placeholder="exemple@internet.su" id="mail" name="user-mail">
             </p>
             <p>
                 <label for="phone">Téléphone :</label>
@@ -37,7 +37,7 @@
         </fieldset>
         <fieldset>
             <p>
-                <input type="checkbox" id="cgu" name="cgu">
+                <input required type="checkbox" id="cgu" name="cgu">
                 <label for="cgu">J'accepte les <a href="#" target="_blank">conditions d'utilisation</a></label>
             </p>
             <div>
