--- a/Frontend/exercice1/www/formulaire.html
+++ b/Frontend/exercice1/www/formulaire.html
@@ -13,26 +13,26 @@
             <legend>État civil</legend> 
             <p>
                 <label for="name">Nom :</label>
-                <input type="text" id="name" name="user-name">
+                <input required type="text" id="name" name="user-name">
             </p>
             <p>
                 <label for="name">Prénom :</label>
-                <input type="text" id="firstname" name="user-firstname">
+                <input required type="text" id="firstname" name="user-firstname">
             </p>
             <p>
                 <label for="name">Date de naissance :</label>
-                <input type="date" id="dob" name="user-dob">
+                <input required type="date" id="dob" name="user-dob">
             </p>
         </fieldset>
         <fieldset>
             <legend>Informations de contact</legend> 
             <p>
                 <label for="email">Adresse Email :</label>
-                <input type="email" placeholder="exemple@internet.su" id="mail" name="user-mail">
+                <input required type="email" placeholder="exemple@internet.su" id="mail" name="user-mail">
             </p>
             <p>
                 <label for="phone">Téléphone :</label>
-                <input type="tel" id="phone" name="user-phone">
+                <input required pattern="[0-9]+" type="tel" id="phone" name="user-phone">
             </p>
         </fieldset>
         <fieldset>
