Fix: fixed form structure and corrections in tableau.html

--- a/Frontend/exercice1/www/formulaire.html
+++ b/Frontend/exercice1/www/formulaire.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/form.css">
     <title>Mon premier formulaire</title>
 </head>
 <body>
-    <h1>Formulaire d'inscription</h1>
-    <h2>Votre compte configuré en 2 minutes !</h2>
+    <h1 class="title">Formulaire d'inscription</h1>
+    <h2 class="title under-title">Votre compte configuré en 2 minutes !</h2>
     <form action="./formulaire.html" method="get">
-        <fieldset>
+        <fieldset class="form-elements">
             <legend>État civil</legend> 
-            <p>
+            <div class="form-labels">
                 <label for="name">Nom :</label>
-                <input required type="text" id="name" name="user-name">
-            </p>
-            <p>
-                <label for="name">Prénom :</label>
-                <input required type="text" id="firstname" name="user-firstname">
-            </p>
-            <p>
-                <label for="name">Date de naissance :</label>
-                <input required type="date" id="dob" name="user-dob">
-            </p>
+                <input required="true" type="text" id="name" name="name"  placeholder="Doe">
+            </div>
+            <div class="form-labels">
+                <label for="firstname">Prénom :</label>
+                <input required="true" type="text" id="firstname" name="firstname" placeholder="John">
+            </div>
+            <div class="form-labels">
+                <label for="dob">Date de naissance :</label>
+                <input required="true" type="date" id="dob" name="dob" >
+            </div>
         </fieldset>
-        <fieldset>
+        <fieldset class="form-elements">
             <legend>Informations de contact</legend> 
-            <p>
-                <label for="email">Adresse Email :</label>
-                <input required type="email" placeholder="exemple@internet.su" id="mail" name="user-mail">
-            </p>
-            <p>
+            <div class="form-labels">
+                <label for="mail">Adresse Email :</label>
+                <input required="true" type="email" placeholder="exemple@internet.su" id="mail" name="mail">
+            </div>
+            <div class="form-labels">
                 <label for="phone">Téléphone :</label>
-                <input required pattern="[0-9]+" type="tel" id="phone" name="user-phone">
-            </p>
+                <input required="true" pattern="0[1-9][0-9]{8}" type="tel" id="phone" name="user-phone">
+            </div>
         </fieldset>
-        <fieldset>
-            <p>
-                <input required type="checkbox" id="cgu" name="cgu">
+        <fieldset class="form-elements">
+            <div class="form-labels" id="check">
+                <input required="true" type="checkbox" id="cgu" name="cgu">
                 <label for="cgu">J'accepte les <a href="#" target="_blank">conditions d'utilisation</a></label>
-            </p>
-            <div>
+            </div>
+            <div class="form-labels sub-button">
                 <button type="submit">S'inscrire</button>
             </div>
         </fieldset>
