--- a/Frontend/exercice1/www/tableau.html
+++ b/Frontend/exercice1/www/tableau.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Les tableaux, c'est beau !</h1>
-    <p>Les tableaux s'utilisent pour des données tabulaires et permettent de présenter des données de façon lisibles</p>
+    <p>Les tableaux s'utilisent pour des données tabulaires et permettent de présenter des données de façon lisible.</p>
     <p>Les tableaux NE DOIVENT PAS être utilisés pour la mise en page, cela est réservé au CSS.</p>
     <hr/>
     <table>
@@ -24,7 +24,7 @@
         <tr>
             <td>2</td>
             <td>Golay</td>
-            <td>Prénom</td>
+            <td>Jerry</td>
         </tr>
         <tr>
             <td>3</td>
