fin exercice tp vigneron

--- a/Frontend/tp-vignoble/index.html
+++ b/Frontend/tp-vignoble/index.html
@@ -44,8 +44,8 @@
             <div class="col main-container">
                 <figure>
                     <img class="main-img" src="./assets/raisin.jpg" alt="Tonneau, bouteille et verre de vin avec raisin">
-                    <figcaption class="caption main-img">
-                        <p>Sequi nescique quisququi dolertalorem</p>
+                    <figcaption>
+                        <p class="caption">Sequi nescique quisququi dolertalorem</p>
                     </figcaption>
                 </figure>
             </div>
@@ -131,7 +131,6 @@
             <hr>
         </div> 
     </main>
-
     <footer class="row" id="footer">
         <ul class="row footer-ul">
             <li class="footer-li"><a href="./index.html">Accueil</a></li>
