Feat: finished desktop page, responsive still a WIP

--- a/Frontend/tp-vignoble/index.html
+++ b/Frontend/tp-vignoble/index.html
@@ -131,15 +131,17 @@
             <hr>
         </div> 
     </main>
-    <footer class="row" id="footer">
-        <ul class="row footer-ul">
-            <li class="footer-li"><a href="./index.html">Accueil</a></li>
-            <li class="footer-li"><a href="#">La Cave</a></li>
-            <li class="footer-li"><a href="#">Le Vigneron</a></li>
-            <li class="footer-li"><a href="#">Les produits</a></li>
-            <li class="footer-li"><a href="#">Contact</a></li>
-        </ul>
-        <img src="./assets/img_footer.png" alt="Raisin et pied de verre à vin">
+    <footer class="row">
+        <div id="footer">
+            <ul class="row footer-ul">
+                <li class="footer-li"><a href="./index.html">Accueil</a></li>
+                <li class="footer-li"><a href="#">La Cave</a></li>
+                <li class="footer-li"><a href="#">Le Vigneron</a></li>
+                <li class="footer-li"><a href="#">Les produits</a></li>
+                <li class="footer-li"><a href="#">Contact</a></li>
+            </ul>
+            <img src="./assets/img_footer.png" alt="Raisin et pied de verre à vin">
+        </div>
     </footer>
 </body>
 </html>
