feat: exercices JS (WIP)

--- a/Frontend/tp-vignoble/www/index.html
+++ b/Frontend/tp-vignoble/www/index.html
@@ -121,7 +121,7 @@
                     <img class="section-img" src="./assets/home-img1.jpg" alt="Bouteille qui verse du vin dans un verre">
                     <div class="col menu-col">
                         <h4>Sequi nescique quisququi dolertalorem</h4>
-                        <p class="paragraph menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, perspiciatis tempore. Architecto voluptas optio libero pariatur tempora alias mollitia quia quasi distinctio veniam? Sed, optio quod alias quaerat recusandae hic!</p>
+                        <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, perspiciatis tempore. Architecto voluptas optio libero pariatur tempora alias mollitia quia quasi distinctio veniam? Sed, optio quod alias quaerat recusandae hic!</p>
                         <button class="btn">Lire la suite</button>
                     </div>
                 </div>
@@ -143,5 +143,6 @@
             <img src="./assets/img_footer.png" alt="Raisin et pied de verre à vin">
         </div>
     </footer>
+    <!--<script src="./script/script.js"></script>-->
 </body>
 </html>
