Feat: exercices JS 2, 6 and 9

--- a/Frontend/exercicesJS/exercices/exercice6/index.html
+++ b/Frontend/exercicesJS/exercices/exercice6/index.html
@@ -26,6 +26,7 @@
         </div>
         <div class="form-row total">
             <div class="border">
+                <label for="total">Total</label>
                 <input id="total" type="text" value="0" name="total">
             </div>
             
