--- a/Frontend/exercicesJS/exercices/exercice9/index.html
+++ b/Frontend/exercicesJS/exercices/exercice9/index.html
@@ -11,17 +11,19 @@
     <form id="form">
         <div class="form-element">
             <input type="text" name="red" value= A2 />
-            <button class="btn" type="button" id="red">Rouge</button>
+            <button class="btn btn-color" type="button" id="red">Rouge</button>
         </div>
+        
         <div class="form-element">
             <input type="text" name="green" value= B7 />
-            <button class="btn" type="button" id="green">Vert</button>
+            <button class="btn btn-color" type="button" id="green">Vert</button>
         </div>
         <div class="form-element">
             <input type="text" name="blue" value= CC />
-            <button class="btn" type="button" id="blue">Bleu</button>
+            <button class="btn btn-color" type="button" id="blue">Bleu</button>
         </div>
-
+        <button class="btn" id="hex" type="button">Hex</button>
+        <button class="btn" id="rgb" type="button">RGB</button>
     </form>
     
 </body>
