feat: exercice form JS

--- a/Frontend/exercicesJS/exercices/exercice9/index.html
+++ b/Frontend/exercicesJS/exercices/exercice9/index.html
@@ -10,22 +10,25 @@
     <h1>Changement de couleur</h1>
     <form id="form">
         <div class="form-element">
-            <input type="text" name="red" value= A2 />
+            <input class="colorInput" type="text" name="red" value= A2 />
             <button class="btn btn-color" type="button" id="red">Rouge</button>
         </div>
         
         <div class="form-element">
-            <input type="text" name="green" value= B7 />
+            <input class="colorInput" type="text" name="green" value= B7 />
             <button class="btn btn-color" type="button" id="green">Vert</button>
         </div>
         <div class="form-element">
-            <input type="text" name="blue" value= CC />
+            <input class="colorInput" type="text" name="blue" value= CC />
             <button class="btn btn-color" type="button" id="blue">Bleu</button>
         </div>
-        <button class="btn" id="hex" type="button">Hex</button>
-        <button class="btn" id="rgb" type="button">RGB</button>
+        <div class="typeOfInput">
+            <input class="radio" type="radio" id="hex" value="hex" checked name="fav-type">
+            <label for="hex">Hex</label>
+            <input class="radio" type="radio" id="rgb" value="rgb" name="fav-type">
+            <label for="rgb">RGB</label>
+        </div>
     </form>
-    
 </body>
 <script src="./scripts/script.js"></script>
 </html>
