feat: exercice formulaire JS (still WIP)

--- a/Frontend/exercice-formulaire-js/index.html
+++ b/Frontend/exercice-formulaire-js/index.html
@@ -26,15 +26,12 @@
             <div class="dob">
                 <label for="day">Jour</label>
                 <select id="list-days">
-                    <option class="list" list="list-days">Choisissez votre jour</option>
                 </select>
                 <label for="month">Mois</label>
                 <select id="list-month">
-                    <option id="m-current" class="list m-list" list="list-month">janvier</option>
                 </select>
                 <label for="year">Année</label>
                 <select id="list-year">
-                    <option id="y-list">1915</option>
                 </select>
             </div>
             <div class="pseudo">
@@ -42,7 +39,7 @@
                 <input id="pseudo" type="text" readonly>
             </div>
             <div class="buttons">
-                <button id="validate" type="submit" disabled>Validation</button>
+                <button id="validate" type="button" disabled>Validation</button>
                 <button type="reset">Annuler</button>
             </div>
         </form>
