--- a/Frontend/exercice-formulaire-js/accueil.html
+++ b/Frontend/exercice-formulaire-js/accueil.html
@@ -9,11 +9,13 @@
 <body>
     <main>
         <h1>Accueil</h1>
+        <div>
+            <a href="./index.html">Retour</a>
+        </div>
         <table id="table">
 
         </table>
     </main>
 </body>
 <script src="./scripts/loadingTable.js"></script>
-
 </html>
