--- a/Frontend/exercice-formulaire-js/index.html
+++ b/Frontend/exercice-formulaire-js/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="buttons">
                 <button id="validate" type="button" disabled>Validation</button>
-                <button type="reset">Annuler</button>
+                <button id="reset" type="reset">Annuler</button>
             </div>
         </form>
     </main>
