update formulaire js added date control

--- a/Frontend/exercice-formulaire-js/index.html
+++ b/Frontend/exercice-formulaire-js/index.html
@@ -26,13 +26,13 @@
             <div class="dob">
                 <label for="day">Jour</label>
                 <select id="list-days">
-                </select>
+                </select class="list">
                 <label for="month">Mois</label>
-                <select id="list-month">
-                </select>
+                <select class="list" id="list-month">
+                </select class="list">
                 <label for="year">Année</label>
-                <select id="list-year">
-                </select>
+                <select class="list" id="list-year">
+                </select class="list">
             </div>
             <div class="pseudo">
                 <label for="pseudo">Affichage de votre pseudo</label>
