--- a/Frontend/exercices-codepostaux-js/index.html
+++ b/Frontend/exercices-codepostaux-js/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <main>
+        <form id="form">
+            <input id="input" type="search" list="searchBar">
+            <button type="button">Valider</button>
+            <datalist id="searchBar">
 
+            </datalist>
+        </form>
     </main>
 </body>
 <script src="./scripts/script.js"></script>
