Update: finished zipcode js, but need polishing

--- a/Frontend/exercices-codepostaux-js/index.html
+++ b/Frontend/exercices-codepostaux-js/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <form id="form">
-            <input id="input" type="search" list="searchBar">
+            <input id="input" type="search" list="searchBar" value="">
             <button type="button">Valider</button>
             <datalist id="searchBar">
 
