Feat: cartes js

--- a/Frontend/exercices-codepostaux-js/index.html
+++ b/Frontend/exercices-codepostaux-js/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <form id="form">
-            <input id="input" type="search" list="searchBar" value="">
+            <input id="input" type="search" list="searchBar" value="" autocomplete="off" placeholder="Entrez un code postal">
             <button type="button">Valider</button>
             <datalist id="searchBar">
 
