--- a/Frontend/exercices-codepostaux-js/index.html
+++ b/Frontend/exercices-codepostaux-js/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <h1>Recherche par code postal</h1>
         <form id="form">
             <input id="input" type="search" list="searchBar" value="" autocomplete="off" placeholder="Entrez un code postal">
             <button type="button">Valider</button>
