--- a/Frontend/tp-cardjs/index.html
+++ b/Frontend/tp-cardjs/index.html
@@ -14,7 +14,7 @@
                     <th>id</th>
                     <th>name</th>
                     <th>level</th>
-                    <th>descrption</th>
+                    <th>description</th>
                     <th>power</th>
                     <th>attack</th>
                     <th>armor</th>
