Corrections exercices and coninuation of tp nutriscore js

--- a/Frontend/tp-nutriscore/index.html
+++ b/Frontend/tp-nutriscore/index.html
@@ -43,21 +43,26 @@
     </header>
     <main>
         <table>
-            <thead>
-                <th>ID</th>
-                <th>NOM</th>
-                <th>CALORIES</th>
-                <th>PROTËINES</th>
-                <th>SEL</th>
-                <th>FIBRES</th>
-                <th>GLUCIDES</th>
-                <th>SUCRE</th>
-                <th>POTASSIUM</th>
-                <th>VITAMINES</th>
-                <th>ÉVALUATIONS</th>
-                <th>NS</th>
-                <th>DEL</th>
+            <thead id="t-head">
+                <tr id="first-row">
+                    <th>ID</th>
+                    <th>NOM</th>
+                    <th>CALORIES</th>
+                    <th>PROTÉÏNES</th>
+                    <th>SEL</th>
+                    <th>FIBRES</th>
+                    <th>GLUCIDES</th>
+                    <th>SUCRE</th>
+                    <th>POTASSIUM</th>
+                    <th>VITAMINES</th>
+                    <th>ÉVALUATIONS</th>
+                    <th>NS</th>
+                    <th>DEL</th>
+                </tr>
             </thead>
+            <tbody id="t-body">
+
+            </tbody>
         </table>
     </main>
 </body>
