--- a/Frontend/tp-cardjs/index.html
+++ b/Frontend/tp-cardjs/index.html
@@ -9,25 +9,9 @@
 <body>
     <main>
         <table class="table">
-            <thead>
-                <tr class="table-head">
-                    <th>id</th>
-                    <th>name</th>
-                    <th>level</th>
-                    <th>description</th>
-                    <th>power</th>
-                    <th>attack</th>
-                    <th>armor</th>
-                    <th>damage</th>
-                    <th>mitigation</th>
-                    <th>played</th>
-                    <th>victory</th>
-                    <th>defeat</th>
-                    <th>draw</th>
-                </tr>
+            <thead class="table-head">
             </thead>
             <tbody class="tbody">
-
             </tbody>
         </table>
     </main>
