update: nutriscore js UI

--- a/Frontend/tp-nutriscore/index.html
+++ b/Frontend/tp-nutriscore/index.html
@@ -46,7 +46,7 @@
             <thead id="t-head">
                 <tr id="first-row">
                     <th>ID</th>
-                    <th>NOM</th>
+                    <th class="name">NOM</th>
                     <th>CALORIES</th>
                     <th>PROTÉÏNES</th>
                     <th>SEL</th>
