Update: cards js with modified UI, still WIP

--- a/Frontend/tp-cardjs/index.html
+++ b/Frontend/tp-cardjs/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <main>
+        <h1>Jeu de cartes</h1>
         <table class="table">
-            <thead class="table-head">
-            </thead>
-            <tbody class="tbody">
-            </tbody>
         </table>
+        <section id="cards">
+
+        </section>
     </main>
 </body>
 <script src="./scripts/script.js"></script>
