update; nearly finished nutriscore js

--- a/Frontend/tp-nutriscore/index.html
+++ b/Frontend/tp-nutriscore/index.html
@@ -36,6 +36,10 @@
                 <fieldset class="categories">
                     <legend>Catégorie</legend>
                     <select name="category" id="cat-select">
+                        <option value="all">Tous</option>
+                        <option value="no-sugar">Sans sucre</option>
+                        <option value="salt-poor">Pauvre en sel</option>
+                        <option value="boost">Boost</option>
                     </select>
                 </fieldset>
             </fieldset>
