update: started save system, still major WIP

--- a/Frontend/tp-nutriscore/www/index.html
+++ b/Frontend/tp-nutriscore/www/index.html
@@ -10,6 +10,7 @@
     <header>
         <div class="title">
             <h1>Cereals</h1>
+            <button class="btn-save">Save</button>
         </div>
         <div class="filters">
             <fieldset class="search">
