--- a/Frontend/tp-nutriscore/www/index.html
+++ b/Frontend/tp-nutriscore/www/index.html
@@ -10,7 +10,8 @@
     <header>
         <div class="title">
             <h1>Cereals</h1>
-            <button class="btn-save">Save</button>
+            <button class="btn btn-save">Save</button>
+            <button class="btn btn-purge">Purge du storage</button>
         </div>
         <div class="filters">
             <fieldset class="search">
