--- a/Frontend/tp-accessibilite/index.html
+++ b/Frontend/tp-accessibilite/index.html
@@ -17,29 +17,29 @@
             <ul class="navbar">
                 <li><a class="white-links" href="./index.html">Accueil</a></li>
                 <li><a class="white-links" href="./pages/ally.html">A11y</a></li>
-                <li><a class="white-links" href="#">Handicaps</a></li>
-                <li><a class="white-links" href="#">Faites un don</a></li>
-                <li><a class="white-links" href="#">Equipe</a></li>
-                <li><a class="white-links" href="#">Plan du site</a></li>
+                <li><a class="white-links" href="./pages/handicaps.html">Handicaps</a></li>
+                <li><a class="white-links" href="./pages/form.html">Faites un don</a></li>
+                <li><a class="white-links" href="./pages/team.html">Equipe</a></li>
+                <li><a class="white-links" href="./pages/map.html">Plan du site</a></li>
                 <li><button class="btn btn-access" type="button">Paramètres Accessiblilté</button></li>
             </ul>
         </nav>
         <div>
             <label class="hidden" for="search-bar">zone de recherche</label>
             <input type="text" placeholder="zone de recherche" id="search-bar" name="search-bar">
-            <button class="btn btn-search" type="button">Rechercher</button>
+            <button class="btn btn-yellow" type="button">Rechercher</button>
         </div>
     </header>
     <main id="content">
         <h1>Bienvenue sur HandiA11y</h1>
         <p class="presentation-text">HandiA11y est un site spécialisé pour découvrir les bases de l'accessibilité web et les différents handicaps à prendre en compte.</p>
-        <section class="presentation">
+        <section id="presentation" class="presentation">
             <h2>Pourquoi <span class="underline">A11y</span> et pas A11é ?</h2>
             <p><span class="underline">A11É</span> est une abréviation pour accessibilité où 11 représente le nombre de lettres entre le a et le é du mot accessibilité. Cette même abbréviation dans sa version anglaise est plus jolie à l'oreille : A11Y</p>
             <h2>Quelle est l'origine du mot HANDICAP ?</h2>
             <p>Le mot <span class="italic">handicap</span> trouve son origine dans l'anglais médiéval. Il est dérivé de l'expression <span class="bolded">hand in cap</span>, qui signifie <span class="italic">main dans le chapeau</span>. À l'époque, cette expression était utilisée dans les jeux de hasard pour indiquer qu'un joueur était désavantagé ou handicapé par rapport aux autres joueurs. Au fil du temps, le terme a été adopté dans d'autres contextes pour décrire une situation où une personne est désavantagée ou limitée dans ses capacités physiques, mentales ou sociales.</p>
         </section>
-        <section class="principles">
+        <section id="principles" class="principles">
             <h2>Le WCAG et les 4 principes A11y</h2>
             <div class="articles">
                 <article class="principles-boxes">
@@ -60,7 +60,7 @@
                 </article>
             </div>
         </section>
-        <section class="criterias">
+        <section id="criterias" class="criterias">
             <h2>Critères</h2>
             <table class="criterias-table">
                 <caption>Les critères WCAG 2.1 sous forme de tableau</caption>
@@ -145,7 +145,7 @@
                 </tbody>
             </table>
         </section>
-        <section class="conformity">
+        <section id="conformity" class="conformity">
             <h2>Conformité</h2>
             <table class="conformity-table">
                 <caption class="up-caption">Tableau des 3 niveaux de conformité WCAG 2.1</caption>
@@ -173,7 +173,7 @@
             <p>Vous pouvez tester la lecture des 2 tableaux avec JAWS ou NVDA pour voir s'ils sont accessibles !</p>
             <a href="https://www.w3.org/WAI/WCAG22/quickref/?versions=2.1">WCAG 2.1 en VO</a>
         </section>
-        <section class="graphic">
+        <section id="graphic" class="graphic">
             <h2>Most common WCAG failures by WebAIM</h2>
             <figure>
                 <figcaption>Most common WCAG failures by WebAIM</figcaption>
@@ -181,7 +181,7 @@
             </figure>
             <a href="https://webaim.org/projects/million/">Explication du graphique et du tableau (en anglais)</a>
         </section>
-        <section class="accessiblity-failures">
+        <section id="failures" class="accessiblity-failures">
             <h2>Échecs et accessibilité</h2>
             <table>
                 <caption>Tableau des échecs les plus courants concernant l'accessibilité numérique</caption>
@@ -229,7 +229,7 @@
     </main>
     <footer>
         <p>© 2023 HandiA11y. Tous droits réservés.</p>
-        <p>Envoyez un courriel à philippe.bouget(@)laposte.net si vous souhaitez suivre une formation sur l'accessibilité.</p>
+        <p>Envoyez un courriel à <a class="white-links" href="mailto:philippe.bouget(@)laposte.net">philippe.bouget(@)laposte.net</a>  si vous souhaitez suivre une formation sur l'accessibilité.</p>
     </footer>
 </body>
 </html>
