--- a/Frontend/tp-accessibilite/template.html
+++ b/Frontend/tp-accessibilite/template.html
@@ -27,7 +27,7 @@
         <div>
             <label class="hidden" for="search-bar">zone de recherche</label>
             <input type="text" placeholder="zone de recherche" id="search-bar" name="search-bar">
-            <button class="btn btn-search" type="button">Rechercher</button>
+            <button class="btn btn-yellow" type="button">Rechercher</button>
         </div>
     </header>
     <main id="content">
@@ -35,7 +35,7 @@
     </main>
     <footer>
         <p>© 2023 HandiA11y. Tous droits réservés.</p>
-        <p>Envoyez un courriel à philippe.bouget(@)laposte.net si vous souhaitez suivre une formation sur l'accessibilité.</p>
+        <p>Envoyez un courriel à <a class="white-links" href="mailto:philippe.bouget(@)laposte.net">philippe.bouget(@)laposte.net</a>  si vous souhaitez suivre une formation sur l'accessibilité.</p>
     </footer>
 </body>
 </html>
