update: tp accessicilite dialog box

--- a/Frontend/tp-accessibilite/index.html
+++ b/Frontend/tp-accessibilite/index.html
@@ -176,7 +176,7 @@
         <section id="graphic" class="graphic">
             <h2>Most common WCAG failures by WebAIM</h2>
             <figure>
-                <figcaption>Most common WCAG failures by WebAIM</figcaption>
+                <figcaption>Graphique des échecs les plus courants par WebAIM</figcaption>
                 <img src="./assets/WebAIM_million.png" alt="">
             </figure>
             <a href="https://webaim.org/projects/million/">Explication du graphique et du tableau (en anglais)</a>
