update: integration of dialog box on other pages, still WIP

--- a/Frontend/tp-accessibilite/pages/ally.html
+++ b/Frontend/tp-accessibilite/pages/ally.html
@@ -128,4 +128,5 @@
         <p>Envoyez un courriel à <a class="white-links" href="mailto:philippe.bouget(@)laposte.net">philippe.bouget(@)laposte.net</a>  si vous souhaitez suivre une formation sur l'accessibilité.</p>
     </footer>
 </body>
+<script src="../scripts/script.js"></script>
 </html>
